# hello-rocket

./: Cargo.toml  README.md
src/: files.rs  main.rs
templates/: files.hbs
templates/error/: 404.hbs
