[package]
name = "hello-rocket"
version = "0.1.0"
authors = ["piaohua <twopiao7@gmail.com>"]
workspace = "../Rocket/"
publish = false

[dependencies]
rocket = { path = "../Rocket/core/lib" }
rocket_codegen = { path = "../Rocket/core/codegen" }
walkdir = "2"
serde = "1.0"
serde_derive = "1.0"

[dependencies.rocket_contrib]
path = "../Rocket/contrib/lib"
default-features = false
features = ["handlebars_templates"]
